fixed color contrast for clock link
resolves #78 , again ;- )

--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,10 @@ body {
     color: white;
 }
 
+.provocation :visited {
+    color: white;
+}
+
 .home #main {
   background-color: inherit;
 }
